--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Israel <israel.nunes74@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "chokidar_usepolling=true nodemon index.js"
+    "start": "chokidar_usepolling=true nodemon src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -15,6 +15,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1"
   }
 }
