--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "chokidar_usepolling=true nodemon src/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
