--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,26 +1,26 @@
 {
   "development": {
     "username": "root",
-    "password": "u7v1p9iB5oGEHSYtG9Pr",
+    "password": "vgcb8iKaZ8wnYYpYWU2G",
     "database": "railway",
-    "host": "containers-us-west-115.railway.app",
+    "host": "containers-us-west-84.railway.app",
     "dialect": "mysql",
-    "port": "7715"
+    "port": "6145"
   },
   "test": {
     "username": "root",
-    "password": "u7v1p9iB5oGEHSYtG9Pr",
+    "password": "vgcb8iKaZ8wnYYpYWU2G",
     "database": "railway",
-    "host": "containers-us-west-115.railway.app",
+    "host": "containers-us-west-84.railway.app",
     "dialect": "mysql",
-    "port": "7715"
+    "port": "6145"
   },
   "production": {
     "username": "root",
-    "password": "u7v1p9iB5oGEHSYtG9Pr",
+    "password": "vgcb8iKaZ8wnYYpYWU2G",
     "database": "railway",
-    "host": "containers-us-west-115.railway.app",
+    "host": "containers-us-west-84.railway.app",
     "dialect": "mysql",
-    "port": "7715"
+    "port": "6145"
   }
 }
