--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "Israel <israel.nunes74@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "npx kill-port 8000 && nodemon src/index.js"
   },
   "dependencies": {
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
-    "kill-port": "2.0.1",
+    "kill-port": "^2.0.1",
     "mysql2": "3.6.0",
     "sequelize": "6.32.1"
   },
