--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Israel <israel.nunes74@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "npx kill-port 8000 && nodemon src/index.js"
+    "start": "npx kill-port 8000 && nodemon src/index.js",
+    "job": "npx kill-port 5000 && nodemon src/job/revenues_payment.js"
   },
   "dependencies": {
     "body-parser": "1.20.2",
@@ -15,6 +16,7 @@
     "express": "4.18.2",
     "kill-port": "^2.0.1",
     "mysql2": "3.6.0",
+    "node-cron": "^3.0.3",
     "sequelize": "6.32.1"
   },
   "devDependencies": {
